--- a/src/main/webapp/pages/CompanyProjects/CompanyProjects.variables.json
+++ b/src/main/webapp/pages/CompanyProjects/CompanyProjects.variables.json
@@ -659,7 +659,7 @@
     "category" : "wm.LiveVariable",
     "dataBinding" : [ {
       "target" : "vendorId",
-      "value" : "bind:Widgets.panelSelectCompany.Widgets.selectCompany.datavalue.ID",
+      "value" : "bind:Widgets.panelSelectCompany.Widgets.selectCompany.datavalue.id",
       "type" : "number"
     } ],
     "operation" : "read",
@@ -2899,7 +2899,7 @@
     "category" : "wm.ServiceVariable",
     "dataBinding" : [ {
       "target" : "vendorId",
-      "value" : "bind:Widgets.panelSelectCompany.Widgets.selectCompany.datavalue.ID",
+      "value" : "bind:Widgets.panelSelectCompany.Widgets.selectCompany.datavalue.id",
       "type" : "integer"
     }, {
       "target" : "approvalStatus",
@@ -2930,7 +2930,7 @@
     "category" : "wm.ServiceVariable",
     "dataBinding" : [ {
       "target" : "vendorId",
-      "value" : "bind:Widgets.panelSelectCompany.Widgets.selectCompany.datavalue.ID",
+      "value" : "bind:Widgets.panelSelectCompany.Widgets.selectCompany.datavalue.id",
       "type" : "integer"
     }, {
       "target" : "active",
