--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -67,7 +67,10 @@
 }, {
   "name" : "CompanyProjects",
   "type" : "PAGE",
-  "params" : [ ]
+  "params" : [ {
+    "name" : "companyID",
+    "type" : "integer"
+  } ]
 }, {
   "name" : "CompanyUsers",
   "type" : "PAGE",
