Company BreadCrum fixes Files modified - [CompanyForms,CompanyMunicipalities,CompanyProfile,CompanyProjects,CompanyUsers]

--- a/src/main/webapp/pages/CompanyProjects/CompanyProjects.variables.json
+++ b/src/main/webapp/pages/CompanyProjects/CompanyProjects.variables.json
@@ -8,11 +8,11 @@
     "dataSet" : [ {
       "label" : "My Company",
       "icon" : "wi wi-work",
-      "link" : "#/MyCompany"
+      "link" : "/MyCompany"
     }, {
       "label" : "Company Projects",
       "icon" : "wi wi-building",
-      "link" : "#/CompanyProjects"
+      "link" : "/CompanyProjects"
     } ],
     "type" : "string",
     "isList" : true,
